This is the part when I say I don't want ya I'm stronger than I've been before This is the part when I break free 'Cause I can't resist it no more

--- a/khoBlog/static/khoBlog/css/_custom.scss
+++ b/khoBlog/static/khoBlog/css/_custom.scss
@@ -47,6 +47,10 @@ $font-family-monospace: $monospace;
             @include color("link");
             @include background-color("lightest-bg");
         }
+
+        &.disabled .page-link {
+            opacity: 0.5;
+        }
     }
 }
 
