--- a/khoBlog/templates/sub_base_main_block.html
+++ b/khoBlog/templates/sub_base_main_block.html
@@ -12,14 +12,14 @@
   {% block pagination %}
     <nav class="blog-pagination">
       {% if is_paginated %}
-        <ul class="pagination mb-0">
+        <ul class="pagination justify-content-center justify-content-md-start flex-wrap m-0">
           {% if page_obj.has_previous %}
-            <li class="page-item bg-primary">
-              <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+            <li class="page-item">
+              <a class="page-link mt-1" href="?page={{ page_obj.previous_page_number }}">Previous</a>
             </li>
           {% else %}
             <li class="page-item disabled">
-              <a class="page-link">Previous</a>
+              <a class="page-link mt-1">Previous</a>
             </li>
           {% endif %}
 
@@ -28,16 +28,16 @@
           {% for i in page_range|default_if_none:page_obj.paginator.get_elided_page_range %}
             {% if page_obj.number == i %}
               <li class="active page-item">
-                <span class="page-link">{{ i }}
+                <span class="page-link mt-1">{{ i }}
                   <span class="visually-hidden">(current)</span></span>
               </li>
             {% else %}
               {% if i == page_obj.paginator.ELLIPSIS %}
                 <li class="page-item">
-                  <span class="page-link">{{ i }}</span></li>
+                  <span class="page-link mt-1">{{ i }}</span></li>
               {% else %}
                 <li class="page-item">
-                  <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+                  <a class="page-link mt-1" href="?page={{ i }}">{{ i }}</a>
                 </li>
               {% endif %}
             {% endif %}
@@ -45,11 +45,11 @@
 
           {% if page_obj.has_next %}
             <li class="page-item">
-              <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+              <a class="page-link mt-1" href="?page={{ page_obj.next_page_number }}">Next</a>
             </li>
           {% else %}
             <li class="page-item disabled">
-              <a class="page-link">Next</a>
+              <a class="page-link mt-1">Next</a>
             </li>
           {% endif %}
         </ul>
