--- a/khoBlog/static/khoBlog/css/main.scss
+++ b/khoBlog/static/khoBlog/css/main.scss
@@ -64,6 +64,10 @@ body {
     }
 }
 
+.blog-pagination {
+    margin-top: -0.25rem;
+}
+
 textarea {
     min-width: 100% !important;
     min-height: 250px !important;
